Fixed horizontal scroll issue

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -20,6 +20,15 @@
   box-sizing: border-box;
 }
 
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 html {
   height: 100%;
   scroll-behavior: smooth;
